public_html/front-end/stylesheetIndex.css
.intro-background {
	background-image: url("https://images.unsplash.com/photo-1563628631561-cc80533f6826?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1345&q=80");
	background-size: cover;
	background-position-y: 60%;
	background-position-x: center;
}

.py-5 {
	padding-bottom: 12.5rem!important;
	padding-top: 12rem!important;
}

/**
text shadows for bootstrap's .text-white class
 */
.text-white {
	text-shadow: 3px 3px 5px #000000;
}

html {
	height: 100%;
}

body {
	color: white;
	background-color: rgb(24, 26, 27);
	height: 100%;
}

button {
	background-color: transparent;
}

.bg-secondary {
	background-color: rgb(24, 26, 27)!important;
}

.bg-color-contact {
	background-color: indigo;
}


form {
	align-content: center;
	margin-top: 2em;
}

.mb-5 {
	margin-bottom: 10rem!important;
}

.pb-5 {
	padding-bottom: 6rem!important;
}

